--- a/demo/src/main/resources/templates/list.html
+++ b/demo/src/main/resources/templates/list.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<h5>Chào ngày mới</h5>
+<div><h4>Chào ngày mới</h4></div>
+
 <h1>
     Xin chào các bạn nhé, minh la tuan!
 </h1>
